--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-bump": "^0.3.0",
     "gulp-clean": "^0.3.1",
     "gulp-rename": "^1.2.2",
-    "lodash": "^3.8.0"
+    "lodash": "^3.8.0",
+    "gulp-mocha": "^2.0.1"
   }
 }
